Fixed issue with the order of tids in matrix_factorization
make_Pval and val_error are much faster now.
Also added some code for Cross-Validation.

--- a/matrix_factorization/matrix_factorization.ipynb
+++ b/matrix_factorization/matrix_factorization.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "JZtDAeafHyXf"
    },
@@ -38,7 +38,9 @@
     "import json\n",
     "import copy\n",
     "import random\n",
-    "from numba import njit"
+    "from numba import njit\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "id": "fPke0KhzHyXh"
    },
@@ -128,7 +130,7 @@
     "        i += 1\n",
     "    return result\n",
     "\n",
-    "# dictionary to translate track uri's to integer indices\n",
+    "# dictionary to translate integer indices to track uri's\n",
     "def make_reverse_track_dict(df):\n",
     "    result = {}\n",
     "    i = 0\n",
@@ -188,23 +190,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# create the big array R consisting of 1's and 0's. I didn't end up using this\n",
-    "def make_R(df):\n",
-    "    m = len(pd.unique(df['pid']))\n",
-    "    n = len(pd.unique(df['track_uri']))\n",
-    "    track_dict = make_track_dict(df)\n",
-    "    pid_dict = make_pid_dict(df)\n",
-    "\n",
-    "    result = np.zeros([m,n])\n",
-    "    for index , row in df.iterrows():\n",
-    "        result[pid_dict[row['pid']], track_dict[row['track_uri']]] = 1\n",
-    "    return result\n",
-    "\n",
     "\n",
     "# create list of tuples where recommendation array should have a 1\n",
     "# i.e. if (2,18) is in this list, then playlist 2 contains track 18\n",
@@ -237,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,19 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "id": "YhJsEpFdHyXi"
    },
    "outputs": [],
    "source": [
-    "num_jsons = 20 # number of files to read\n",
+    "num_jsons = 6 # number of files to read\n",
+    "num_playlists = num_jsons*1000\n",
     "data = read_data(num_jsons)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,19 +397,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create train-test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74]\n",
+      "[75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "I_train, I_test = train_test_split(range(100), test_size=0.25, shuffle=False)\n",
+    "print(I_train)\n",
+    "print(I_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Percentage of the total database to reserve for validation and testing\n",
+    "val_size_abs = 0.25\n",
+    "test_size    = 0.25\n",
+    "shuffle = False\n",
+    "\n",
+    "# Note: the first pid_train contains (1-test_size) percent of the data.\n",
+    "# We need to use val_size so that val_size*(1-test_size) = val_size_abs.\n",
+    "val_size = val_size_abs/(1-test_size)\n",
+    "pid_train, pid_test = train_test_split(range(num_playlists), test_size=test_size, shuffle=shuffle)\n",
+    "pid_train, pid_val  = train_test_split(pid_train, test_size=val_size, shuffle=shuffle)\n",
+    "\n",
+    "R_list_train = R_list[ np.isin(R_list[:,0], pid_train), :]\n",
+    "R_list_val   = R_list[ np.isin(R_list[:,0], pid_val),   :]\n",
+    "R_list_test  = R_list[ np.isin(R_list[:,0], pid_test),  :]\n",
+    "\n",
+    "# Store the track id of songs in the train/val/test sets\n",
+    "tid_train = list(np.unique( R_list_train[:,1] ))\n",
+    "tid_val   = list(np.unique( R_list_val[:,1]   ))\n",
+    "tid_test  = list(np.unique( R_list_test[:,1]  ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next, we specify the number of features and create matrices $P$ and $Q$ whose entries are randomly taken from a normal distribution with $\\mu = 0$ and $\\sigma = 0.1$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "f = 10 # number of latent features\n",
-    "num_songs = max(reverse_track_dict.keys()) + 1\n",
-    "num_playlists = num_jsons*1000\n",
-    "\n",
+    "# num_songs = max(reverse_track_dict.keys()) + 1\n",
+    "num_songs = len(tid_train)\n",
+    "num_playlists = len(pid_train)\n",
     "\n",
     "# initialize random values for matrices P and Q. Entries are between -1 and 1\n",
     "P = np.random.normal(0, 0.1, (num_playlists, f))\n",
@@ -435,14 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "id": "b_nyoRWcHyXi"
    },
    "outputs": [],
    "source": [
     "# Run gradient descent algorithm with alpha = 0.001, llambda = 0.005 for 100 iterations\n",
-    "P_trained, Q_trained = run_epoch(R_list, P, Q, 0.001, 0.005, 100)"
+    "P_trained, Q_trained = run_epoch(R_list_train, P, Q, 0.001, 0.005, 100)"
    ]
   },
   {
@@ -456,28 +500,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, to demonstrate how to compute error for a new collection of playlists, let's first read in an extra json file's worth of data (I could've just read in the single extra file instead of all original files again but I was too lazy to change the read_data function). Again this step should utilize the SQL database."
+    "Now, to demonstrate how to compute error for a new collection of playlists, let's first read in an extra json file's worth of data (I could've just read in the single extra file instead of all original files again but I was too lazy to change the read_data function). Again this step should utilize the SQL database.\n",
+    "\n",
+    "**Note:** I changed R_list_new into R_list_test during the train-val-test split."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "id": "juN8npsfHyXj"
-   },
-   "outputs": [],
-   "source": [
-    "data1 = read_data(num_jsons+1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The list of data points corresponding to our extra json file\n",
-    "R_list_new = np.array([(u,i) for u,i in make_R_list(data1) if u >= num_jsons*1000])"
+    "# R_list_new = np.array([(u,i) for u,i in make_R_list(data1) if u >= num_jsons*1000])"
    ]
   },
   {
@@ -489,42 +524,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# THIS FUNCTION, (as well as new_user_vec) CAN AND SHOULD BE OPTIMIZED TO USE numba.  \n",
     "# For the sake of time, I'll leave it as is for now\n",
     "# If we can avoid using lists (like tid_list), then things will be numba compatible. \n",
-    "def make_Pval(pid_list, R_list_new, Q, llambda):\n",
+    "def make_Pval(new_pids, R_list_new, Q, llambda, tid_known=tid_train):\n",
     "    num_songs , f = np.shape(Q)\n",
     "    P_val = np.zeros((len(new_pids), f))\n",
     "    count = 0 # keeps track of where in pid_list we are\n",
-    "    for pid in pid_list:\n",
-    "\n",
+    "    \n",
+    "    # Remove tracks that we don't recognize\n",
+    "    R_list_new = R_list_new[ np.isin(R_list_new[:,1], tid_known), : ]\n",
+    "    \n",
+    "    for pid in new_pids:\n",
     "        # create list of tracks in the playlist\n",
-    "        tid_list = []\n",
-    "        for u , i in R_list_new:\n",
-    "            # need to check that the tid exists in our train set. \n",
-    "            # Note if the train set is randomized (as opposed to the first n jsons), the i < num_songs condition may need to be changed.\n",
-    "            if u == pid and i < num_songs:\n",
-    "                tid_list.append(i)\n",
-    "            if u > pid:\n",
-    "                break\n",
+    "        # Remember: R_list_new has two columns: 0 is pid, 1 is tid\n",
+    "        tid_list = R_list_new[ R_list_new[:,0]==pid, 1]\n",
+    "        \n",
+    "        # With repetition\n",
+    "        # tid_list = list(tid_list)\n",
+    "        # tid_list = [tid for tid in tid_list if tid in tid_known]\n",
+    "        \n",
+    "        # Without repetition\n",
+    "        # tid_list = list( set(tid_list).intersection(tid_known) )\n",
     "\n",
     "        # x is the row of Pval corresponding to this pid\n",
-    "        x = new_user_vec(tid_list, Q_trained, 0.005)\n",
+    "        x = new_user_vec(tid_list, Q_trained, llambda)\n",
     "        for feature in range(f):\n",
     "            P_val[count, feature] = x[0,feature]\n",
     "        count += 1\n",
     "        \n",
     "    return P_val\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "new_pids = list(range(num_jsons * 1000, (num_jsons + 1) * 1000 ))\n",
-    "Pval = make_Pval(new_pids, R_list_new, Q_trained, 0.005)"
+    "Pval = make_Pval(pid_test, R_list_test, Q_trained, 0.005)"
    ]
   },
   {
@@ -536,32 +571,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13688.07424182042"
+       "38010.87360028364"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def val_error(R_list_new, pid_list, Pval, Q, llambda):\n",
-    "    num_songs, f = np.shape(Q)\n",
+    "def val_error(R_list_new, pid_list, Pval, Q, llambda, tid_known=tid_train):\n",
+    "    _, f = np.shape(Q)\n",
     "    result = 0\n",
+    "    \n",
+    "    # Remove tracks that we don't recognize\n",
+    "    R_list_new = R_list_new[ np.isin(R_list_new[:,1], tid_known), : ]\n",
+    "    \n",
     "    for pid, tid in R_list_new:\n",
-    "        # As in the make_Pval function, the following condition needs to be changed for a randomized val set.\n",
-    "        if tid < num_songs:\n",
-    "            result += (1 - Pval[pid_list.index(pid), :] @ Q[tid, :])\n",
+    "        result += (1 - Pval[pid_list.index(pid), :] @ Q[tid, :])\n",
+    "    \n",
     "    result += llambda * (np.linalg.norm(Pval)**2)\n",
     "    return result\n",
     "\n",
-    "val_error(R_list_new, new_pids, Pval, Q_trained, 0.005)"
+    "val_error(R_list_test, pid_test, Pval, Q_trained, 0.005)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4.39'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sqlalchemy as db\n",
+    "db.__version__"
    ]
   },
   {
