Set random seed in train-test split (see matrix_factorization)

--- a/matrix_factorization/matrix_factorization.ipynb
+++ b/matrix_factorization/matrix_factorization.ipynb
@@ -429,13 +429,15 @@
     "# Percentage of the total database to reserve for validation and testing\n",
     "val_size_abs = 0.25\n",
     "test_size    = 0.25\n",
-    "shuffle = False\n",
+    "shuffle = True\n",
     "\n",
     "# Note: the first pid_train contains (1-test_size) percent of the data.\n",
     "# We need to use val_size so that val_size*(1-test_size) = val_size_abs.\n",
     "val_size = val_size_abs/(1-test_size)\n",
-    "pid_train, pid_test = train_test_split(range(num_playlists), test_size=test_size, shuffle=shuffle)\n",
-    "pid_train, pid_val  = train_test_split(pid_train, test_size=val_size, shuffle=shuffle)\n",
+    "pid_train, pid_test = train_test_split(range(1e6), test_size=test_size,\n",
+    "                                       shuffle=shuffle, random_state=11)\n",
+    "pid_train, pid_val  = train_test_split(pid_train, test_size=val_size,\n",
+    "                                       shuffle=shuffle, random_state=11)\n",
     "\n",
     "R_list_train = R_list[ np.isin(R_list[:,0], pid_train), :]\n",
     "R_list_val   = R_list[ np.isin(R_list[:,0], pid_val),   :]\n",
