--- a/playlist2vec/playlist2vec.ipynb
+++ b/playlist2vec/playlist2vec.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "6c2bfaa2-2b3b-4567-b22d-64bf89c074aa",
    "metadata": {},
    "outputs": [],
@@ -34,10 +34,38 @@
     "import copy\n",
     "import time\n",
     "import sqlalchemy as db\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "from annoy import AnnoyIndex\n",
     "from sentence_transformers import SentenceTransformer\n",
     "model = SentenceTransformer('all-MiniLM-L6-v2')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_size_abs = 0.15\n",
+    "test_size    = 0.15\n",
+    "shuffle = True\n",
+    "\n",
+    "# Note: the first pid_train contains (1-test_size) percent of the data.\n",
+    "# We need to use val_size so that val_size*(1-test_size) = val_size_abs.\n",
+    "val_size = val_size_abs/(1-test_size)\n",
+    "pid_train, pid_test = train_test_split(range(10**6), test_size=test_size,\n",
+    "                                       shuffle=shuffle, random_state=11)\n",
+    "pid_train, pid_val  = train_test_split(pid_train, test_size=val_size,\n",
+    "                                       shuffle=shuffle, random_state=11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -55,12 +83,48 @@
    "outputs": [],
    "source": [
     "####use SQL to generate a list of pid's in training set\n",
-    "pid_train = []"
+    "# pid_train = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import sqlalchemy as db\n",
+    "engine = db.create_engine(\"sqlite:///../spotify_sql.db\")\n",
+    "conn = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Throwbacks'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "pid = 0\n",
+    "query = f\"SELECT * FROM playlists WHERE pid=0\"\n",
+    "mydf = pd.read_sql_query(query, conn)\n",
+    "mydf['name'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "0b8b52f2",
    "metadata": {},
    "outputs": [],
@@ -75,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "b7692a4c",
    "metadata": {},
    "outputs": [],
@@ -83,7 +147,9 @@
     "for pid in pid_train:\n",
     "    #use SQL to pull name of playlist of given pid\n",
     "    #store in the variable name pid_name\n",
-    "    pid_name \n",
+    "\n",
+    "    query = f\"SELECT * FROM playlists WHERE pid={pid}\"\n",
+    "    pid_name = pd.read_sql_query(query, conn)['name'].values[0]\n",
     "    \n",
     "    #construct vector from playlist name\n",
     "    v = model.encode(pid_name.lower().strip())\n",
@@ -94,15 +160,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "4daf1e40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#number of trees for search\n",
     "t.build(1024)\n",
     "t.save('playlist_vectors.ann')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -121,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
